# PinyinTab

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  install.sh  pinyintab.plugin.zsh  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo-source/: 乘法口诀表.c  乘法口诀表.java  乘法口诀表.jl  乘法口诀表.js  乘法口诀表.pl  乘法口诀表.py  乘法口诀表.rb  乘法口诀表.rs  乘法口诀表.sh  乘法口诀表.swift  九九测试程序.py  数据.csv  测试.py  项目说明.md
demo-source/测试目录/: 内部脚本.py  说明.txt
demo-source/测试目录/内部文件夹/: 深层说明.txt
docs/: ARCHITECTURE.md  BUG_REPORT.md  COMPATIBILITY.md  COMPETITOR_ANALYSIS.md  Linux版本部署与测试.md  RELEASE_GUIDE.md  技术栈与实现说明.md  第二版功能说明.md
docs/archive/: README.md
scripts/: configure-repository.sh  install-from-source.sh  install-online.sh  package-release.sh  test-completion.sh  test-language-demos.sh  test-linux.sh  test-macos.zsh  test-oh-my-zsh.zsh
shell/: pinyintab.bash  pinyintab.zsh
src/: cli.rs  diagnostics.rs  lib.rs  main.rs  mapper.rs  test_support.rs
src/completion/: matcher.rs  mod.rs  path.rs
