[package]
name = "pinyintab"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
description = "Pinyin-aware native path completion for Bash and Zsh"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hhhSyyyShhh/PinyinTab"
homepage = "https://github.com/hhhSyyyShhh/PinyinTab"
keywords = ["pinyin", "completion", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]
autobins = false

[[bin]]
name = "ptab"
path = "src/main.rs"

[dependencies]
pinyin = "0.10"
